05-Ingress/shopping-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping
  labels:
    app: shopping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopping
  template:
    metadata:
      labels:
        app: shopping
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
          - containerPort: 80
        volumeMounts:
          - name: homepage-config
            mountPath: /usr/share/nginx/html
      volumes:
        - name: homepage-config
          configMap:
            name: homepage-file
