05-Ingress/whoami-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  labels:
    app: whoami-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami-app
  template:
    metadata:
      labels:
        app: whoami-app
    spec:
      containers:
      - name: whoami-pod
        image: sixeyed/whoami:21.04
        ports:
        - containerPort: 80
