05-Ingress/echo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deploy
  labels:
    app: echo-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-app
  template:
    metadata:
      labels:
        app: echo-app
    spec:
      containers:
      - name: echo
        image: inanimate/echo-server
        ports:
---
apiVersion: v1
kind: Service
metadata:
  name: echo-svc
spec:
  type: ClusterIP
  selector:
    app: echo-app
  ports:
    - port: 8080
