05-Ingress/shopping-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopping-service
spec:
  type: NodePort
  selector:
    app: shopping
  ports:
    - port: 8080
      targetPort: 80
      nodePort: 30007
