05-Ingress/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  type: ClusterIP
  selector:
    app: myhome
  ports:
    - port: 8080
      targetPort: 8080
