05-Ingress/whoami-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-svc
  labels:
    app: whoami-app
spec:
  type: ClusterIP
  ports: 
    - port: 80 
      targetPort: 80
      protocol: TCP
  selector:
    app: whoami-app
